add tracing
